[FLINK-24493] [flink-connector-base] Improved Demultiplexing Sink Test Suite and Coverage